# eagle

./: .gitignore  CMakeLists.txt  README.en.md  README.md  build.sh  clean.sh  eagle.service
conf/: eagle.policy  eagle_config.ini
dvfstool/: CMakeLists.txt  build.sh  dvfs.c  freq_pattern.c  freq_set.c  multi_thread.c
dvfstool/include/: dvfs.h  dvfs_log.h
dvfstool/test/: CMakeLists.txt
dvfstool/test/build_scripts/: build.sh  lcov.sh
dvfstool/test/testcase/: FreqPatternTest.cpp  FreqSetTest.cpp  MultiThreadTest.cpp
eagle/: CMakeLists.txt  build.sh  eagle.service  install.sh  uninstall.sh
eagle/conf/: eagle.policy  eagle_config.ini  eagle_policy.ini
eagle/inc/: common.h  config.h  datacollect.h  devicectrl.h  eaglecore.h  policy.h  policymgr.h  policyservice.h  servicemgr.h  utils.h
eagle/inc/shared/: policydt.h  public.h
eagle/src/: CMakeLists.txt  config.c  datacollect.c  eaglecore.c  log.c  main_frame.c  policy.c  policymgr.c  servicemgr.c  utils.c
eagle/src/freq_service/: CMakeLists.txt  freq_service.c  freq_service.h
eagle/src/idle_service/: CMakeLists.txt  idle_service.c  idle_service.h
eagle/src/mpc_service/: CMakeLists.txt  mpc_service.c  mpc_service.h
eagle/src/pwrapi_adaptor/: CMakeLists.txt  pwrapiadpt.c  pwrapiadpt.h
eagle/src/pwrapi_adaptor/pwrapi/: readme
eagle/src/sched_service/: CMakeLists.txt  sched_service.c  sched_service.h
inc/: common.h  log.h  pluginmgr.h  policy.h  utils.h
mpctool/: mpctool.service  setup.py
mpctool/mpctool/: mpctool.py
mpctool/mpctool/common/: mpc_const.py  sys_tool.py
mpctool/mpctool/data_collector/: data_processor.py  running_data_collector.py
mpctool/mpctool/ipmi_opt/: fan_controller.py  mpc_controller.py
mpctool/mpctool/model_trainer/: maintain_model.py  models.py
src/: CMakeLists.txt  config.c  devicectrl.c  log.c  main_frame.c  pluginmgr.c  policyservice.c  utils.c
